plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.rsargsyan.sprite'
version = '0.0.1-SNAPSHOT'
description = 'sprite main context service'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'org.postgresql:postgresql'
	implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.12.0'
	implementation 'org.springframework.boot:spring-boot-starter-amqp'
	implementation 'software.amazon.awssdk:s3'
	implementation(platform("software.amazon.awssdk:bom:2.27.21"))
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
	implementation 'io.trbl:blurhash:1.0.0'
	implementation 'com.github.kagkarlsson:db-scheduler-spring-boot-starter:15.0.0'
}

tasks.named('test') {
	useJUnitPlatform()
}
